# Volt

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  todo.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: blerp.rs  browser.rs  error.rs  info.rs  lib.rs  main.rs  paint.rs  test.rs  visual.rs
src/blerp/: device.rs  mod.rs  processing.rs  wavefile.rs
src/browser/: entry.rs  mod.rs  preview.rs
src/images/: mod.rs
src/visual/: background.rs  mod.rs  navbar.rs  switch.rs
