[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = "0.28.0"
egui = { version = "0.28.0", features = ["color-hex"] }
egui_extras = { version = "0.28.0", features = ["all_loaders"] }
egui_plot = "0.28.0"
image = { version = "0.25.1", features = ["jpeg", "png"] }
itertools = "0.13.0"
rodio = "0.19.0"
rustfft = "6.2.0"
serde = "1.0.203"
strum = { version = "0.26.3", features = ["derive"] }

[build]
linker = "/usr/bin/clang"
rustflags = ["-Z", "threads=8", "-C", "link-arg=--ld-path=/usr/bin/mold"]
