[package]
name = "volt"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15.3"
eframe = { version = "0.28.1", features = ["wgpu"] }
egui = { version = "0.28.0", features = ["color-hex"] }
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
egui_plot = "0.28.1"
image = { version = "0.25.2", features = ["jpeg", "png"] }
itertools = "0.13.0"
open = "5.3.0"
rodio = "0.19.0"
rustfft = "6.2.0"
serde = "1.0.210"
strum = { version = "0.26.3", features = ["derive"] }

# Compile time and runtime optimizations
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"